--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
   },
   "homepage": "https://github.com/sereigh/abbr#readme",
   "devDependencies": {
+    "coveralls": "^3.1.0",
     "eslint": "^7.23.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.1",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3",
+    "parcel": "^2.0.0-beta.2",
+    "react-test-renderer": "^17.0.2"
   }
 }
