added testing config and scripts

--- a/package.json
+++ b/package.json
@@ -1,9 +1,4 @@
 {
-  "dependencies": {
-    "express": "^4.17.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
   "name": "abbr",
   "description": "<!-- > This material was originally posted [here](http://www.quora.com/What-is-Amazons-approach-to-product-development-and-product-management). It is reproduced here for posterities sake.",
   "version": "1.0.0",
@@ -11,8 +6,11 @@
   "directories": {
     "test": "test"
   },
+  "browserslist": "> 0.2%",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx parcel serve ./public/index.html",
+    "build": "npx parcel build ./public/index.html",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,6 +22,11 @@
     "url": "https://github.com/sereigh/abbr/issues"
   },
   "homepage": "https://github.com/sereigh/abbr#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
   "devDependencies": {
     "coveralls": "^3.1.0",
     "eslint": "^7.23.0",
