--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "directories": {
     "test": "test"
   },
+  "engines": {
+    "node": ">=8.10.0"
+  },
   "browserslist": "> 0.2%",
   "scripts": {
     "start": "npx parcel serve ./public/index.html",
     "build": "npx parcel build ./public/index.html",
-    "test": "jest"
+    "test": "jest --coverage && coveralls < coverage/lcov.info"
   },
   "repository": {
     "type": "git",
@@ -33,6 +36,7 @@
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
