--- a/codefresh.yml
+++ b/codefresh.yml
@@ -2,6 +2,8 @@ version: "1.0"
 
 stages:
   - "clone"
+  - "build"
+  - "test"
   - "report"
   - "merge"
 
@@ -13,6 +15,29 @@ steps:
     revision: "${{CF_BRANCH}}"
     git: "github"
     stage: "clone"
+
+  build:
+    title: "Building Docker image"
+    type: "build"
+    image_name: "sereigh/abbr"
+    working_directory: "${{clone}}"
+    tag: "${{CF_BRANCH_TAG_NORMALIZED}}"
+    dockerfile: "Dockerfile"
+    stage: "build"
+    registry: "dockerhub"
+
+  test:
+    title: "Running test"
+    type: "freestyle"
+    image: "node:12.19.0"
+    working_directory: "${{clone}}"
+    commands:
+      - 'export COVERALLS_SERVICE_NAME=${{COVERALLS_SERVICE_NAME}}'
+      - 'export COVERALLS_GIT_BRANCH=${{CF_BRANCH}}'
+      - 'export COVERALLS_REPO_TOKEN=${{COVERALLS_REPO_TOKEN}}'
+      - npm install --save-dev jest
+      - npm run test
+    stage: "test"
 
   report:
     title: Sending results..
