--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ build/
 dist/
 .cache
 .parcel-cache
+bundle.js
 
 # Dependency directorys
 # Deployed apps should consider commenting these lines out:
