--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
   "directories": {
     "test": "test"
   },
-  "engines": {
-    "node": ">=8.10.0"
-  },
   "browserslist": "> 0.2%",
   "scripts": {
-    "start": "npx parcel serve ./public/index.html",
-    "build": "npx parcel build ./public/index.html",
+    "build": "webpack",
+    "watch": "webpack -w",
+    "start": "nodemon server",
     "test": "jest --coverage && coveralls < coverage/lcov.info | node ./bin/coveralls.js --verbose"
   },
   "repository": {
@@ -29,21 +27,30 @@
   },
   "homepage": "https://github.com/sereigh/abbr#readme",
   "dependencies": {
+    "dotenv": "^7.0.0",
     "express": "^4.17.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.13.13",
+    "@webpack-contrib/eslint-config-webpack": "^3.0.0",
+    "babel-loader": "^8.2.2",
     "coveralls": "^3.1.0",
     "eslint": "^7.23.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-webpack-plugin": "^2.5.3",
     "jest": "^26.6.3",
-    "parcel": "^2.0.0-beta.2",
-    "react-test-renderer": "^17.0.2"
+    "nodemon": "^2.0.7",
+    "react-test-renderer": "^17.0.2",
+    "webpack": "^5.28.0",
+    "webpack-cli": "^4.6.0"
   }
 }
